--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "node-sass": "^4.9.3",
     "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
@@ -10,6 +12,7 @@
     "react-dom": "^16.5.2",
     "react-dropzone": "^5.1.0",
     "react-scripts": "1.1.5",
+    "react-test-renderer": "^16.5.2",
     "react-treeview": "^0.4.7"
   },
   "scripts": {
@@ -20,5 +23,6 @@
     "start": "npm-run-all -p watch-css start-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "devDependencies": {}
 }
